New and improved user endpoints (#132)
* Rename token endpoints

* Fix typo

* Rename user endpoints, allow changing other user

* Update API spec and reset PW form

* Fix user password change

* User endpoints

* Update API spec
